--- a/Satellite/Base.lproj/Main.storyboard
+++ b/Satellite/Base.lproj/Main.storyboard
@@ -21,10 +21,10 @@
             </objects>
             <point key="canvasLocation" x="-238" y="450"/>
         </scene>
-        <!--View Controller-->
+        <!--Satellite View Controller-->
         <scene sceneID="JsD-Hu-4br">
             <objects>
-                <viewController id="Xpy-vh-wA4" sceneMemberID="viewController">
+                <viewController id="Xpy-vh-wA4" customClass="SatelliteViewController" customModule="Satellite" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="8c0-Ee-qXv"/>
                         <viewControllerLayoutGuide type="bottom" id="Gce-26-jVC"/>
@@ -46,6 +46,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="qtK-2m-pCW"/>
+                    <connections>
+                        <outlet property="DateLabel" destination="ljF-1s-LVm" id="AJU-oS-any"/>
+                        <outlet property="Image" destination="8kN-hb-kUa" id="Jum-6I-zom"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2he-a4-Htn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
