Step4 Load Image complete

--- a/Satellite/Base.lproj/Main.storyboard
+++ b/Satellite/Base.lproj/Main.storyboard
@@ -33,17 +33,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8kN-hb-kUa">
-                                <rect key="frame" x="162" y="128" width="277" height="257"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8kN-hb-kUa">
+                                <rect key="frame" x="162" y="117" width="277" height="257"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="277" id="ciB-sC-Kvd"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ljF-1s-LVm">
-                                <rect key="frame" x="279" y="495" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ljF-1s-LVm">
+                                <rect key="frame" x="279" y="434" width="42" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="42" id="vKA-P5-0bh"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="8kN-hb-kUa" firstAttribute="centerY" secondItem="J2e-42-UmB" secondAttribute="centerY" constant="-54.5" id="4zV-ae-2Mu"/>
+                            <constraint firstItem="ljF-1s-LVm" firstAttribute="centerX" secondItem="8kN-hb-kUa" secondAttribute="centerX" id="9q2-eD-Ixv"/>
+                            <constraint firstItem="ljF-1s-LVm" firstAttribute="top" secondItem="8kN-hb-kUa" secondAttribute="bottom" constant="60" id="MCa-5K-hs7"/>
+                            <constraint firstItem="Gce-26-jVC" firstAttribute="top" secondItem="ljF-1s-LVm" secondAttribute="bottom" constant="145" id="Skc-o6-blT"/>
+                            <constraint firstItem="8kN-hb-kUa" firstAttribute="centerX" secondItem="J2e-42-UmB" secondAttribute="centerX" id="g1e-PR-M7N"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="qtK-2m-pCW"/>
                     <connections>
